# directory-observer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: DirectoryObserver.h
src/: DirectoryObserver.cpp
tests/: test_main.cpp
